--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -92,7 +92,7 @@ en:
     page_entries_info:
       one_page:
         display_entries:
-          zero: "No %{entry_name} found"
+          zero: ""
           one: "Showing 1 - 1 of 1 results"
           other: "Showing 1 - %{count} of %{count} results"
       more_pages:
